--- a/blog_generation.ipynb
+++ b/blog_generation.ipynb
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 267,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,8 +122,7 @@
     "    params = {\n",
     "        \"engine\": \"google\",\n",
     "        \"q\": query,\n",
-    "        #\"api_key\": os.environ[\"SERPER_API_KEY\"]\n",
-    "        \"api_key\": \"442f68ad7fffc6565fa502a17195eb11a5ce42eeac28b39ba9592f1f3460bea3\"\n",
+    "        #\"api_key\": os.environ[\"SERPER_API_KEY\"\n",
     "    }\n",
     "\n",
     "    search = GoogleSearch(params)\n",
